Added nested grouping examples

--- a/StudentGrouping/StudentGrouping.vbproj
+++ b/StudentGrouping/StudentGrouping.vbproj
@@ -4,31 +4,35 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8CC2B0BD-79E7-42DC-8B8E-97B7F5D2A17F}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>PersonLibrary</RootNamespace>
-    <AssemblyName>PersonLibrary</AssemblyName>
+    <ProjectGuid>{88EF02C5-3AEA-4ECE-A8A2-F1761679107D}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <StartupObject>StudentGrouping.Module1</StartupObject>
+    <RootNamespace>StudentGrouping</RootNamespace>
+    <AssemblyName>StudentGrouping</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>Windows</MyType>
+    <MyType>Console</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>PersonLibrary.xml</DocumentationFile>
+    <DocumentationFile>StudentGrouping.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>PersonLibrary.xml</DocumentationFile>
+    <DocumentationFile>StudentGrouping.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -46,6 +50,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -64,13 +69,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Employee.vb" />
-    <Compile Include="Classes\EmployeeGroup.vb" />
-    <Compile Include="Classes\Employees.vb" />
-    <Compile Include="Classes\People.vb" />
-    <Compile Include="Classes\PersonGroup.vb" />
-    <Compile Include="Classes\PersonGroupByMultipleProperties.vb" />
-    <Compile Include="Classes\Students.vb" />
+    <Compile Include="GroupingClasses\ItemGroup.vb" />
+    <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -86,8 +86,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Classes\Person.vb" />
-    <Compile Include="Classes\Student.vb" />
+    <Compile Include="GroupingClasses\StudentGroup.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -107,6 +106,13 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PersonLibrary\PersonLibrary.vbproj">
+      <Project>{8cc2b0bd-79e7-42dc-8b8e-97b7f5d2a17f}</Project>
+      <Name>PersonLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
