--- a/StudentGrouping/StudentGrouping.vbproj
+++ b/StudentGrouping/StudentGrouping.vbproj
@@ -107,6 +107,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="readme.md" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PersonLibrary\PersonLibrary.vbproj">
