--- a/NorthWindAzureSqlClient/NorthWindAzureSqlClient.vbproj
+++ b/NorthWindAzureSqlClient/NorthWindAzureSqlClient.vbproj
@@ -105,5 +105,8 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DataScripts\script.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
