Added examples for single property query

--- a/StudentGrouping/StudentGrouping.vbproj
+++ b/StudentGrouping/StudentGrouping.vbproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GroupingClasses\ItemGroup.vb" />
+    <Compile Include="GroupingClasses\StudentContainer1.vb" />
     <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
