--- a/CategoryProductEntitiesFrontEnd/CategoryProductEntitiesFrontEnd.vbproj
+++ b/CategoryProductEntitiesFrontEnd/CategoryProductEntitiesFrontEnd.vbproj
@@ -90,6 +90,12 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GroupSumForm.Designer.vb">
+      <DependentUpon>GroupSumForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GroupSumForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -109,6 +115,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GroupSumForm.resx">
+      <DependentUpon>GroupSumForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
